# Tax-Law-Ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  app_entry.py  build.bat  docker-compose.yml  push-to-registry.sh  pyproject.toml  requirements.txt  run.sh  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml  docker-publish.yml
backend/: config.py  main.py
backend/api/: routes_chat.py  routes_heads.py  routes_search.py  routes_section.py  routes_settings.py
backend/data/: chunks_2025.json
backend/enrichment/: __init__.py  batch_enricher.py  llm_enricher.py  rag_schema.py  rule_enricher.py
backend/indexing/: chunker.py  embedder.py  qdrant_store.py
backend/parsing/: extractor.py  head_classifier.py  section_parser.py  structure.py  table_parser.py
backend/rag/: chat.py  graph.py  llm_provider.py  prompt_builder.py  reranker.py  retriever.py  web_search.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ActToggle.tsx  Markdown.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  history.ts
frontend/src/pages/: BrowsePage.tsx  ChatPage.tsx  (+3 more)
scripts/: build_index.py  download_models.py  embed_and_upload.py  enrich_sections.py  export_docling_json.py  extract_and_index.py  generate_comparison_excel.py  load_to_qdrant.py  parse_pdfs.py  rule_enrich.py  test_rag.py  vl_extract_2025.py
